# Rusty-Findr

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md
.github/workflows/: create-release.yml  release.yml
assets/compiled/: default-config.toml
migrations/: 001_init.sql  002_torrent_tracker_url.sql  003_job_title_poster.sql
src/: main.rs
src/classes/: config.rs  database.rs  job_handler.rs  job_queue.rs  logger.rs  mod.rs  prerequisite.rs  server.rs
src/classes/errors/: mod.rs  stage_error.rs
src/classes/models/: index.rs  job.rs  mod.rs  torrent.rs
src/functions/: datetime.rs  find_binary.rs  mod.rs  query_jackett.rs  query_tmdb.rs  score_torrents.rs  walk_files.rs
src/functions/stages/: cleanup.rs  download.rs  index.rs  mod.rs  save.rs  sterilize.rs
src/routes/: health.rs  indexes.rs  jobs.rs  mod.rs  tmdb.rs  web.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: app-layout.tsx  login-form.tsx  media-card.tsx  media-grid.tsx  media-row.tsx  search-dialog.tsx  title-dialog.tsx  torrent-text.tsx
web/src/components/ui/: badge.tsx  dialog.tsx  dropdown-menu.tsx
web/src/lib/: api.ts  hooks.ts  types.ts
web/src/pages/: discover.tsx  jobs.tsx  library.tsx
