[package]
name = "rusty-findr"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.51", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "postgres", "uuid"] }
better-auth = { version = "0.9", features = ["axum", "sqlx-postgres"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
quick-xml = { version = "0.39", features = ["serialize"] }
qbit-rs = { version = "0.5", default-features = false, features = ["reqwest", "builder", "rustls-tls"] }
url = "2.5.8"
rust-embed = { version = "8.11", features = ["mime-guess"] }
